# sec_extractor

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/edgar/: client.rs  mod.rs  models.rs
src/extractors/: mod.rs  section.rs
src/storage/: mod.rs
src/utils/: error.rs  html_debug.rs  logging.rs  mod.rs
