[package]
name = "sec_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime, sleep timer
reqwest = { version = "0.12", features = ["json"] } # HTTP client (json feature optional for now but useful later)
thiserror = "1.0" # Error handling
tracing = "0.1" # Logging facade
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Logging implementation
clap = { version = "4", features = ["derive"] } # CLI parsing
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0" # JSON support
regex = "1.10" # Regular expressions for section extraction
chrono = "0.4" # Date/time handling
once_cell = "1" # <<< Added for lazy static Regex compilation

[dev-dependencies]
tokio-test = "0.4" # Testing utilities for async code
mockito = "1.0" # HTTP mocking for tests

[features]
default=[]
test-integragion=[]