[package]
name = "sec_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Core Async & HTTP ---
tokio = { version = "1", features = ["full"] } # Async runtime, time, filesystem, etc.
reqwest = { version = "0.12", features = ["json"] } # HTTP client, enable JSON feature for API calls

# --- Parsing & Extraction ---
scraper = "0.19" # HTML parsing and querying via CSS selectors
regex = "1.10"   # Regular expressions for text matching within DOM elements
roxmltree = "0.19" # XML parsing (for future XBRL handling)

# --- CLI & Configuration ---
clap = { version = "4", features = ["derive"] } # Command-line argument parsing

# --- Data Handling & Serialization ---
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization framework
serde_json = "1.0" # JSON support for APIs and metadata output
chrono = { version = "0.4" } # Date/time handling (for metadata timestamps)

# --- Utilities ---
thiserror = "1.0" # Error handling boilerplate
tracing = "0.1"   # Logging facade
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Logging implementation (read RUST_LOG)
once_cell = "1" # For lazy static initialization (Selectors, Regex)

# --- Dev Dependencies (for testing) ---
[dev-dependencies]
tokio-test = "0.4" # Testing utilities for async code
# mockito = "1.0" # HTTP mocking for tests (Uncomment if needed for client tests)

# --- Features (Optional) ---
# Can be used to enable/disable parts of the build
[features]
default=[]
# test-integration=[] # Example feature flag